--- a/Property FW and wreath products/Medians/Median.2.tex
+++ b/Property FW and wreath products/Medians/Median.2.tex
@@ -778,8 +778,8 @@ But then we have the primitive action of the wreath product $G\wr_XH$ on $G^X\co
 %\]
 which preserves $\bigoplus_XG$.
 It is easy to check that the map $d_\infty\colon\bigoplus_XG\times\bigoplus_XG\to\mathbf R$ defined by $d_\infty(\psi_1,\psi_2)\coloneqq\max\setst{d\bigl(\psi_1(x),\psi_2(x)\bigr)}{x\in X}$ is a $G\wr_XH$-invariant ultrametric.
-Finally, let $h\in G$ be an element of unbounded $G$-orbit for $d$ and let $x_0$ be any element of $X$.
-Then for any $g$ in $G$ we have $(\delta_{x_0}^g,1).\delta_{x_0}^h=\delta_{x_0}^{gh}$ and hence $d_\infty(\delta_{x_0}^h,\delta_{x_0}^{gh})=d(h,gh)$ is unbounded.
+Finally, let $h\in G$ be an element of unbounded $G$-orbit for $d$ and let $x_0$ be any element of $X$. We define $\delta_{x_0}^g : X \rightarrow G$ as the function which is equal to $1$ for all $x \neq x_0$ and to $g$ for $x = x_0$ \mycomment[GS]{C'était pas définit avant les $\delta_{x_0}^g$ juste?}
+Then for any $g$ in $G$ we have $(\delta_{x_0}^g,1).\delta_{x_0}^h=\delta_{x_0}^{gh}$ and hence $d_\infty(\delta_{x_0}^h,\delta_{x_0}^{gh})=d(h,gh)$ is unbounded.1
 
 Suppose now that both $G$ and $H$ have cof~$\neq\omega$ and that $H$ acts on $X$ with finitely many orbits. We want to prove that $G\wr_XH$ has cof~$\neq\omega$.
 Since $H$ acts on $X$ with finitely many orbit, by Corollary~\ref{Cor:Prod} it is enough to show that $G\wr_YH$ has cof~$\neq\omega$ when $Y$ is one $H$-orbit.
@@ -832,7 +832,7 @@ That is, the diameter of $G\wr_YH.z$ is itself bounded by $\max\{D_1,D_2\}$, whi
 \end{proof}
 %
 %
-While the fact that being a tree is not compatible with products is an obstacle to our methods, we still have the following weak version of Theorem~\ref{Thm:Technic} for property FA.
+While the fact that being a tree is not compatible with products \mycomment[GS]{on a enlevé la définition de ça il me semble, c'est compatible with power ?} is an obstacle to our methods, we still have the following weak version of Theorem~\ref{Thm:Technic} for property FA.
 %Finally, while the fact that being a tree is not compatible with products is an obstacle to our methods, we still have the following weak version of Theorem~\ref{Thm:Technic} for property FA.
 %
 %
